# rasterizer

./: Cargo.toml  README.md
examples/: model.rs
examples/assets/: Cube.gltf  TheDonut.gltf
examples/clipping/: main.rs
examples/lines/: main.rs
examples/phong/: main.rs
examples/stochastic-aa/: main.rs
examples/triangles/: main.rs
src/: clipper.rs  lib.rs  rasterizer.rs
src/presenter/: mod.rs  wgpu_presenter.rs
