[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-debuginfo]
inherits = "release"
debug = 1

[dependencies]
glam = "0.21.2"
wgpu = { version = "0.13.1", optional = true }
pollster = { version = "0.2.5", optional = true }
raw-window-handle = { version = "0.4.3", optional = true }
bytemuck = { version = "1.10.0", features = ["derive", "min_const_generics"] }
rayon-core = "1.9.3"

[features]
wgpu_presenter = ["wgpu", "pollster", "raw-window-handle"]

[[example]]
name = "lines"
required-features = ["wgpu_presenter"]

[[example]]
name = "triangles"
required-features = ["wgpu_presenter"]

[dev-dependencies]
winit = "0.26.1"
gltf = { version = "1.0.0", features = ["names"] }
