[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-debuginfo]
inherits = "release"
debug = 1

[dependencies]
glam = "0.22.0"
wgpu = { version = "0.14.0", optional = true }
pollster = { version = "0.2.5", optional = true }
raw-window-handle = { version = "0.5.0", optional = true }
bytemuck = { version = "1.12.1", features = ["derive", "min_const_generics"] }
rayon-core = "1.9.3"
rand = { version = "0.8.5", features = ["small_rng"] }

[features]
wgpu_presenter = ["wgpu", "pollster", "raw-window-handle"]

[[example]]
name = "lines"
required-features = ["wgpu_presenter"]

[[example]]
name = "triangles"
required-features = ["wgpu_presenter"]

[[example]]
name = "stochastic-aa"
required-features = ["wgpu_presenter"]

[dev-dependencies]
winit = "0.27.5"
gltf = { version = "1.0.0", features = ["names"] }
