[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-debuginfo]
inherits = "release"
debug = 1
lto = "fat"
codegen-units = 1

[dependencies]
glam = "0.24.0"
wgpu = { version = "0.16.1", optional = true }
pollster = { version = "0.3.0", optional = true }
raw-window-handle = { version = "0.5.2", optional = true }
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
rayon-core = "1.11.0"
rand = { version = "0.8.5", features = ["small_rng"] }
image = { version = "0.24.6", optional = true }

[features]
wgpu_presenter = ["wgpu", "pollster", "raw-window-handle"]

[[example]]
name = "lines"
required-features = ["wgpu_presenter"]

[[example]]
name = "clipping"
required-features = ["wgpu_presenter"]

[[example]]
name = "stochastic-aa"
required-features = ["wgpu_presenter"]

[[example]]
name = "phong"
required-features = ["wgpu_presenter"]

[dev-dependencies]
winit = "0.28.6"
gltf = { version = "1.2.0", features = ["names"] }
